# Machine-Learning-Kohn-Sham-potential

./: CMakeLists.txt  README.md
lib/: common.h  grid.h  ground_state.h  hamiltonian.h  inversion.cpp  inversion.h  ks_system.h  propagation.h  rf_system.h  td_math.h
src/: main.cpp  make_dataset.py  make_plots.ipynb  tdksnn.py  tdksnn_cpu.py  train_2e.py  train_2e_cpu.py  train_2e_sftplus.py  train_ho.py
